fixed wrapping of keys

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body,html {
 .keys {
   display: flex;
   flex: 1;
+  flex-wrap: wrap;
   min-height: 100vh;
   align-items: center;
   justify-content: center;
